--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
                         <img src="/static/img/logo_light.png">
                         ONDEXUS
                     </a>
+                    <!--
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                         <ul class="navbar-nav">
-                            <!--
                                 <li class="nav-item">
                                 <a class="nav-link" href="/contact.html">Contact</a>
                                 </li>
-                            -->
                         </ul>
                     </div>
+                    -->
                 </div>
             </nav>
 
@@ -164,6 +164,9 @@
                         <button type="button" class="btn btn-primary mt-3" data-toggle="modal" data-target="#myModal">Contact Sales</button>
                     </div>
                     <div class="col-md-5 mt-5 mt-lg-0"><img class="divider-image img-fluid" src="/static/img/team.jpg"></div>
+                </div>
+                <div class="row">
+                    <div class="mt-5">&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script></div>
                 </div>
             </div>
         </div>
